bat.string1.lessons.bat.string1.StringBits.scala.error
stringBits:3: error: not found: value n
  for(i<-1 to n){
              ^